--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="index.html" class="nav-link">Início</a></li>
         <li><a href="receitas.html" class="nav-link">Receitas</a></li>
         <li><a href="sobre.html" class="nav-link">Sobre Nós</a></li>
+        <li><a href="compras.html" class="nav-link">Compras</a></li>
         <li><a href="login.html" class="btn-login">Login</a></li>
       </ul>
     </nav>
@@ -84,11 +85,11 @@
 
     <section class="cta-section">
         <div class="container">
-            <h2>Junte-se à nossa comunidade!</h2>
-            <p>Crie sua conta para salvar suas receitas favoritas e compartilhar suas próprias criações sustentáveis.</p>
-            <a href="login.html" class="btn-primary">Criar Conta Agora</a>
-        </div>
-    </section>
+          <h2>Faça Parte da Nossa Comunidade!</h2>
+          <p>Crie uma conta gratuita para salvar suas receitas favoritas, compartilhar criações e fazer parte do movimento contra o desperdício.</p>
+          <a href="criar-conta.html" class="btn-primary">Criar Minha Conta Agora</a>
+      </div>
+  </section>
 </main>
 
 <footer class="site-footer">
@@ -138,4 +139,4 @@
 <script src="js/main.js"></script>
 
 </body>
-</html>
+</html>v
