--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - EcoCozinha</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="login.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -20,6 +19,7 @@
         <li><a href="index.html" class="nav-link">Início</a></li>
         <li><a href="receitas.html" class="nav-link">Receitas</a></li>
         <li><a href="sobre.html" class="nav-link">Sobre Nós</a></li>
+        <li><a href="compras.html" class="nav-link">Compras</a></li>
         <li><a href="login.html" class="btn-login">Login</a></li>
       </ul>
     </nav>
@@ -48,58 +48,48 @@
             <button type="submit" class="btn-primary">Entrar</button>
         </form>
         <div class="signup-link">
-            <p>Ainda não tem uma conta? <a href="#">Cadastre-se</a></p>
+            <p>Ainda não tem uma conta? <a href="criar-conta.html">Cadastre-se</a></p>
         </div>
     </div>
 </main>
 
 <footer class="site-footer">
-  <div class="container footer-container">
-
-    <div class="footer-column">
-      <h4 class="footer-title">🌿 EcoCozinha</h4>
-      <p class="muted">Receitas inteligentes para seu bolso e para o planeta. Cozinhe sem desperdício e com muito sabor.</p>
-    </div>
-
-    <div class="footer-column">
-      <h4 class="footer-title">Navegação</h4>
-      <ul class="footer-links">
-        <li><a href="sobre.html">Sobre Nós</a></li>
-        <li><a href="receitas.html">Todas as Receitas</a></li>
-        <li><a href="login.html">Login / Cadastro</a></li>
-        <li><a href="#">Política de Privacidade</a></li>
-        <li><a href="#">Termos de Uso</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column">
-      <h4 class="footer-title">Siga-nos</h4>
-      <p class="muted">Acompanhe dicas, vídeos e receitas novas todos os dias.</p>
-      <div class="social-icons">
-        <a href="https://facebook.com" target="_blank" class="social-link" aria-label="Facebook">
-          <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" aria-hidden="true"><path d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z"></path></svg>
-        </a>
-        <a href="https://instagram.com" target="_blank" class="social-link" aria-label="Instagram">
-          <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" aria-hidden="true"><path d="M12 2c2.717 0 3.056.01 4.122.06 1.065.05 1.79.217 2.428.465.66.254 1.216.598 1.772 1.153a4.902 4.902 0 011.153 1.772c.247.637.415 1.363.465 2.428.047 1.066.06 1.405.06 4.122s-.013 3.056-.06 4.122c-.05 1.065-.218 1.79-.465 2.428a4.883 4.883 0 01-1.153 1.772 4.915 4.915 0 01-1.772 1.153c-.637.247-1.363.415-2.428.465-1.066.047-1.405.06-4.122.06s-3.056-.013-4.122-.06c-1.065-.05-1.79-.218-2.428-.465a4.89 4.89 0 01-1.772-1.153 4.904 4.904 0 01-1.153-1.772c-.248-.637-.415-1.363-.465-2.428C2.013 15.056 2 14.717 2 12s.013-3.056.06-4.122c.05-1.065.217-1.79.465-2.428a4.88 4.88 0 011.153-1.772A4.902 4.902 0 015.45 3.525c.638-.248 1.362-.415 2.428-.465C8.944 2.013 9.283 2 12 2zm0 5a5 5 0 100 10 5 5 0 000-10zm6.5-3a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"></path></svg>
-        </a>
-        <a href="https://twitter.com" target="_blank" class="social-link" aria-label="Twitter">
-          <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" aria-hidden="true"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path></svg>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    <div class="container">
-      <p>© 2025 EcoCozinha. Todos os direitos reservados.</p>
-      <p class="small-note">Desenvolvido como projeto de estudo.</p>
-    </div>
-  </div>
-</footer>
-
+    </footer>
 
 <script src="js/main.js"></script>
-<script src="js/login.js"></script>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+    const formLogin = document.getElementById('form-login');
+    const emailInput = document.getElementById('email');
+    const passwordInput = document.getElementById('password');
+    const errorMessage = document.getElementById('error-message');
+
+    if (formLogin) {
+        formLogin.addEventListener('submit', (event) => {
+            // Impede o envio padrão do formulário, que recarregaria a página
+            event.preventDefault();
+
+            const email = emailInput.value;
+            const password = passwordInput.value;
+
+            // --- SIMULAÇÃO DE AUTENTICAÇÃO ---
+            // Em um projeto real, aqui você faria uma chamada para um servidor.
+            if (email === 'usuario@ecocozinha.com' && password === 'senha123') {
+                errorMessage.textContent = '';
+                alert('Login realizado com sucesso! Redirecionando...');
+                // Salva um item no navegador para simular que o usuário está logado
+                localStorage.setItem('usuarioLogado', email);
+                // Redireciona o usuário para a página inicial
+                window.location.href = 'index.html';
+            } else {
+                // Mostra a mensagem de erro
+                errorMessage.textContent = 'E-mail ou senha inválidos. Tente novamente.';
+            }
+        });
+    }
+});
+</script>
 
 </body>
 </html>
