--- a/receitas.html
+++ b/receitas.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nossas Receitas - EcoCozinha</title>
-  <link rel="stylesheet" href="css/receitas.css">
-    <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Receitas - EcoCozinha</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <header class="header">
   <div class="container ajuste-flex">
     <a href="index.html" class="logo">🌿 EcoCozinha</a>
-    <nav class="nav">
+    <nav class="nav" id="nav-menu">
       <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="receitas.html">Receitas</a></li>
-        <li><a href="sobre.html">Sobre Nós</a></li>
+        <li><a href="index.html" class="nav-link">Início</a></li>
+        <li><a href="receitas.html" class="nav-link">Receitas</a></li>
+        <li><a href="sobre.html" class="nav-link">Sobre Nós</a></li>
+        <li><a href="compras.html" class="nav-link">Compras</a></li>
         <li><a href="login.html" class="btn-login">Login</a></li>
       </ul>
     </nav>
@@ -27,77 +23,50 @@
 </header>
 
 <main>
-    <section class="page-title">
-        <div class="container">
-            <h1>Nossas Receitas Sustentáveis</h1>
-            <p>Explore pratos deliciosos que fazem bem para você, para o seu bolso e para o planeta.</p>
-        </div>
-    </section>
-
-    <section class="busca-e-filtros">
-        <div class="container">
-            <input type="text" id="barra-pesquisa" placeholder="Busque pelo nome da receita...">
-            <div class="filtros">
-                <label><input type="checkbox" class="filtro" value="aproveitamento"> Aproveitamento Integral</label>
-                <label><input type="checkbox" class="filtro" value="baixo"> Custo Baixo</label>
-                <label><input type="checkbox" class="filtro" value="salgado"> Salgado</label>
-                <label><input type="checkbox" class="filtro" value="doce"> Doce</label>
-            </div>
-        </div>
+    <section class="hero-card">
+      <h2>Nossas Receitas</h2>
+      <p>Filtre por tipo ou dieta. Clique em "Abrir" para ver a receita completa.</p>
+      <div class="controls">
+        <div class="search-container"><input id="searchInput" placeholder="Buscar por receita, ingrediente ou tag..."></div>
+        <div id="filters" class="filters-row"></div>
+      </div>
     </section>
 
     <section class="lista-receitas">
-        <div class="container" id="receitas-container">
-            </div>
+      <div id="recipesList" class="container"></div>
     </section>
 </main>
-
-<footer class="site-footer">
-  <div class="container footer-container">
-
-    <div class="footer-column">
-      <h4 class="footer-title">🌿 EcoCozinha</h4>
-      <p class="muted">Receitas inteligentes para seu bolso e para o planeta. Cozinhe sem desperdício e com muito sabor.</p>
-    </div>
-
-    <div class="footer-column">
-      <h4 class="footer-title">Navegação</h4>
-      <ul class="footer-links">
-        <li><a href="sobre.html">Sobre Nós</a></li>
-        <li><a href="receitas.html">Todas as Receitas</a></li>
-        <li><a href="login.html">Login / Cadastro</a></li>
-        <li><a href="#">Política de Privacidade</a></li>
-        <li><a href="#">Termos de Uso</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column">
-      <h4 class="footer-title">Siga-nos</h4>
-      <p class="muted">Acompanhe dicas, vídeos e receitas novas todos os dias.</p>
-      <div class="social-icons">
-        <a href="https://facebook.com" target="_blank" class="social-link" aria-label="Facebook">
-          <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" aria-hidden="true"><path d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z"></path></svg>
-        </a>
-        <a href="https://instagram.com" target="_blank" class="social-link" aria-label="Instagram">
-          <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" aria-hidden="true"><path d="M12 2c2.717 0 3.056.01 4.122.06 1.065.05 1.79.217 2.428.465.66.254 1.216.598 1.772 1.153a4.902 4.902 0 011.153 1.772c.247.637.415 1.363.465 2.428.047 1.066.06 1.405.06 4.122s-.013 3.056-.06 4.122c-.05 1.065-.218 1.79-.465 2.428a4.883 4.883 0 01-1.153 1.772 4.915 4.915 0 01-1.772 1.153c-.637.247-1.363.415-2.428.465-1.066.047-1.405.06-4.122.06s-3.056-.013-4.122-.06c-1.065-.05-1.79-.218-2.428-.465a4.89 4.89 0 01-1.772-1.153 4.904 4.904 0 01-1.153-1.772c-.248-.637-.415-1.363-.465-2.428C2.013 15.056 2 14.717 2 12s.013-3.056.06-4.122c.05-1.065.217-1.79.465-2.428a4.88 4.88 0 011.153-1.772A4.902 4.902 0 015.45 3.525c.638-.248 1.362-.415 2.428-.465C8.944 2.013 9.283 2 12 2zm0 5a5 5 0 100 10 5 5 0 000-10zm6.5-3a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"></path></svg>
-        </a>
-        <a href="https://twitter.com" target="_blank" class="social-link" aria-label="Twitter">
-          <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" aria-hidden="true"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path></svg>
-        </a>
+  
+<div id="modal" class="modal">
+    <div class="modal-card" role="dialog" aria-modal="true">
+      <div class="modal-header">
+        <h2 id="modalTitle">Receita</h2>
+        <div class="modal-header-controls">
+          <span id="modalImpact" class="pill"></span>
+          <button id="closeModalBtn" class="btn-close-modal">Fechar</button>
+        </div>
+      </div>
+      <div class="modal-content">
+        <img id="modalImage" src="" alt="Foto da receita" class="modal-image">
+        <div class="modal-main">
+          <div id="modalDesc" class="modal-desc"></div>
+          <div class="pills-row">
+            <div class="pill" id="modalTime"></div>
+            <div class="pill" id="modalDiff"></div>
+            <div class="pill" id="modalYield"></div>
+          </div>
+        </div>
+        <div class="modal-section"><h3>Ingredientes</h3><ul id="modalIngredients" class="modal-list"></ul></div>
+        <div class="modal-section"><h3>Modo de preparo</h3><ol id="modalSteps" class="modal-list"></ol></div>
+        <div class="modal-section"><h3>Dicas de aproveitamento</h3><ul id="modalTips" class="modal-list"></ul></div>
       </div>
     </div>
-  </div>
+</div>
 
-  <div class="footer-bottom">
-    <div class="container">
-      <p>© 2025 EcoCozinha. Todos os direitos reservados.</p>
-      <p class="small-note">Desenvolvido como projeto de estudo.</p>
-    </div>
-  </div>
-</footer>
+<footer class="site-footer">
+    </footer>
 
-
+<script src="js/main.js"></script>
 <script src="js/receitas.js"></script>
-
 </body>
 </html>
