correção do erro - receitas

--- a/receitas.html
+++ b/receitas.html
@@ -32,10 +32,13 @@
       </div>
     </section>
 
-    <section class="lista-receitas">
-      <div id="recipesList" class="container"></div>
     </section>
-</main>
+
+    <section class="lista-receitas">
+      <div id="recipesList" class="container">
+          </div>
+    </section>
+    </main>
   
 <div id="modal" class="modal">
     <div class="modal-card" role="dialog" aria-modal="true">
