--- a/compras.html
+++ b/compras.html
@@ -13,7 +13,7 @@
 
 <header class="header">
   <div class="container ajuste-flex">
-    <a href="index.html" class="logo">🌿 EcoCozinha</a>
+    <a href="index.html" class="logo">🌿 ecozinha</a>
     <nav class="nav" id="nav-menu">
       <ul>
         <li><a href="index.html" class="nav-link">Início</a></li>
@@ -41,7 +41,7 @@
   <div class="container footer-container">
 
     <div class="footer-column">
-      <h4 class="footer-title">🌿 EcoCozinha</h4>
+      <h4 class="footer-title">🌿 ecozinha</h4>
       <p class="muted">Receitas inteligentes para seu bolso e para o planeta. Cozinhe sem desperdício e com muito sabor.</p>
     </div>
 
