--- a/criar-conta.html
+++ b/criar-conta.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>EcoCozinha — Crie sua Conta</title>
+  <title>ecozinha — Crie sua Conta</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 
 <header class="header">
   <div class="container ajuste-flex">
-    <a href="index.html" class="logo">🌿 EcoCozinha</a>
+    <a href="index.html" class="logo">🌿 ecozinha</a>
     <nav class="nav" id="nav-menu">
       <ul>
         <li><a href="index.html" class="nav-link">Início</a></li>
