--- a/receitas.html
+++ b/receitas.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Receitas - EcoCozinha</title>
+  <title>Receitas - ecozinha</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="header">
   <div class="container ajuste-flex">
-    <a href="index.html" class="logo">🌿 EcoCozinha</a>
+    <a href="index.html" class="logo">🌿 ecozinha</a>
     <nav class="nav" id="nav-menu">
       <ul>
         <li><a href="index.html" class="nav-link">Início</a></li>
