--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre Nós - EcoCozinha</title>
+  <title>Sobre Nós - Ecozinha</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 
 <header class="header">
   <div class="container ajuste-flex">
-    <a href="index.html" class="logo">🌿 EcoCozinha</a>
+    <a href="index.html" class="logo">🌿 ecozinha</a>
     <nav class="nav" id="nav-menu">
       <ul>
         <li><a href="index.html" class="nav-link">Início</a></li>
@@ -38,7 +38,7 @@
             <div class="about-section">
                 <img src="https://via.placeholder.com/800x400.png?text=Nossa+Equipe" alt="Nossa Equipe" class="sobre-imagem">
                 <h2>Quem Somos</h2>
-                <p>A EcoCozinha nasceu de um desejo simples: mostrar que é possível cozinhar pratos incríveis, economizar dinheiro e cuidar do planeta, tudo ao mesmo tempo. Acreditamos que o desperdício de alimentos é um dos maiores desafios da nossa geração, e a mudança começa na cozinha de cada um.</p>
+                <p>A ecozinha nasceu de um desejo simples: mostrar que é possível cozinhar pratos incríveis, economizar dinheiro e cuidar do planeta, tudo ao mesmo tempo. Acreditamos que o desperdício de alimentos é um dos maiores desafios da nossa geração, e a mudança começa na cozinha de cada um.</p>
                 <p>Nossa plataforma reúne receitas criativas que dão um novo propósito a ingredientes que muitas vezes são descartados. De talos e cascas a sementes, tudo pode se transformar em uma refeição deliciosa e nutritiva.</p>
             </div>
             
@@ -69,7 +69,7 @@
   <div class="container footer-container">
 
     <div class="footer-column">
-      <h4 class="footer-title">🌿 EcoCozinha</h4>
+      <h4 class="footer-title">🌿 ecozinha</h4>
       <p class="muted">Receitas inteligentes para seu bolso e para o planeta. Cozinhe sem desperdício e com muito sabor.</p>
     </div>
 
