--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
 <header class="header">
   <div class="container ajuste-flex">
-    <a href="index.html" class="logo">🌿 EcoCozinha</a>
+    <a href="index.html" class="logo">🌿 ecozinha</a>
     <nav class="nav" id="nav-menu">
       <ul>
         <li><a href="index.html" class="nav-link">Início</a></li>
